--- a/BrewingApp/MainPage.xaml
+++ b/BrewingApp/MainPage.xaml
@@ -45,6 +45,7 @@
                     <toolkit:HubTile Grid.Row="1" Grid.Column="0" 
                                          Margin="12,12,0,0"
                                          Title="Brew &#13;House"
+                                         Source=""
                                          Tap="HubTile_Tap" 
                                          Name="BrewHouse" />
                     <toolkit:HubTile Grid.Row="1" Grid.Column="1" 
@@ -54,7 +55,7 @@
                                           Name="HopsMalt" />
                     <toolkit:HubTile Grid.Row="2" Grid.Column="0" 
                                          Margin="12,12,0,0"
-                                         Title="Converters" 
+                                         Title="Convert &#13;Units" 
                                          Tap="HubTile_Tap"
                                          Name="Converters" />
                     <toolkit:HubTile Grid.Row="2" Grid.Column="1" 
