--- a/BrewingApp/Pages/PivotConverters.xaml
+++ b/BrewingApp/Pages/PivotConverters.xaml
@@ -4,9 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:vm="clr-namespace:BrewingApp.Data"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -17,13 +20,140 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--Pivot Control-->
-        <controls:Pivot Title="Unit Converters">
+        <controls:Pivot Title="Unit Converters" Name="ConverterPivot">
             <!--Pivot item one-->
+            <controls:PivotItem Header="Heat">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Border
+                        Grid.Row="0"
+                        BorderThickness="6"
+                        BorderBrush="Silver"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Top" 
+                        Margin="0,0,0,10">
+                        <Grid >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <toolkit:ListPicker 
+                                Header=""
+                                Grid.Row="0">
+                                <sys:String>Fahrenheit</sys:String>
+                            </toolkit:ListPicker>
+                            <TextBox
+                                Grid.Row="1"
+
+                                HorizontalAlignment="Stretch" 
+                                Name="txtFahrenheit" 
+                                InputScope="NumberFullWidth"
+                                Text="{Binding Path=Fahrenheit, Mode=TwoWay}">
+                            </TextBox>
+                         </Grid>
+                    </Border>
+                    <Border
+                        Grid.Row="1"
+                        BorderThickness="6"
+                        BorderBrush="Silver"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Top"
+                        Margin="0,10,0,0">
+                    
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <TextBox 
+                                Grid.Row="0"
+                                HorizontalAlignment="Stretch" 
+                                Name="txtCelsius" 
+                                Text="{Binding Path=Celsius, Mode=TwoWay}" 
+                                InputScope="NumberFullWidth" Margin="0,6,0,2">
+                            </TextBox>
+                            <toolkit:ListPicker 
+                                Header="" 
+                                Grid.Row="1" 
+                                Height="60" Margin="12,0,12,12" 
+                                VerticalAlignment="Bottom">
+                                <sys:String>Celsius</sys:String>
+                            </toolkit:ListPicker>
+                         </Grid>
+                    </Border>
+                </Grid>
+            </controls:PivotItem>
+            
+            <!--Pivot item two-->
             <controls:PivotItem Header="Fluids">
-                <Grid/>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Border
+                        Grid.Row="0"
+                        BorderThickness="6"
+                        BorderBrush="Silver"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Top" 
+                        Margin="0,0,0,10">
+                        <Grid >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <toolkit:ListPicker 
+                                Header=""
+                                Grid.Row="0" Name="USFluidPicker">
+                                <sys:String>US Ounce</sys:String>
+                                <sys:String>US Gallon</sys:String>
+                            </toolkit:ListPicker>
+                            <TextBox
+                                Grid.Row="1"
+                                HorizontalAlignment="Stretch" 
+                                Name="txtUSFliuds" 
+                                InputScope="NumberFullWidth"
+                                Text="{Binding Path=USFluid, Mode=TwoWay}">
+                            </TextBox>
+                        </Grid>
+                    </Border>
+                    <Border
+                        Grid.Row="1"
+                        BorderThickness="6"
+                        BorderBrush="Silver"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Top"
+                        Margin="0,10,0,0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <TextBox 
+                                Grid.Row="0"
+                                HorizontalAlignment="Stretch" 
+                                Name="txtMetricFluids" 
+                                Text="{Binding MetricFluid, Mode=TwoWay}" 
+                                InputScope="NumberFullWidth" Margin="0,6,0,2">
+                            </TextBox>
+                            <toolkit:ListPicker 
+                                Header="" 
+                                Grid.Row="1" 
+                                Margin="12,0,12,12" 
+                                Name="MetricFluidPicker">
+                                <sys:String>Liter</sys:String>
+                                <sys:String>Milliliter</sys:String>
+                            </toolkit:ListPicker>
+                        </Grid>
+                    </Border>
+                </Grid>
             </controls:PivotItem>
 
-            <!--Pivot item two-->
+            <!--Pivot item three-->
             <controls:PivotItem Header="Weights">
                 <Grid/>
             </controls:PivotItem>
