--- a/BrewingApp/App.xaml
+++ b/BrewingApp/App.xaml
@@ -1,13 +1,12 @@
-﻿<Application 
-    x:Class="BrewingApp.App"
+﻿<Application
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" 
+    x:Class="BrewingApp.App"
+    >
 
     <!--Application Resources-->
-    <Application.Resources>
-    </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
         <!--Required object that handles lifetime events for the application-->
