--- a/BrewingApp/CustomControls/HopListItem.xaml
+++ b/BrewingApp/CustomControls/HopListItem.xaml
@@ -15,6 +15,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
+                <RowDefinition Height="0.01*"/>
             </Grid.RowDefinitions>
             
             <toolkit:ListPicker 
@@ -70,7 +71,16 @@
                     Text="{Binding Amount, Mode=TwoWay}"
                     InputScope="NumberFullWidth">
                 </toolkit:PhoneTextBox>
-            </Grid>
+            </Grid>       
+            <Rectangle
+                Grid.Row="2"
+                Stroke="LightGray"
+                StrokeThickness="1"
+                Height="1"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom" 
+                Margin="13,0,13,0">
+            </Rectangle>
         </Grid>
     </Grid>
 </UserControl>
